# inout

./: .gitignore  LICENSE  docker-compose.yml
application/: build.gradle
backend/: .eslintrc.json  README.md  build.gradle  package-lock.json  package.json  pom.xml  settings.gradle  tsconfig.json
backend/docs/: swagger.yml
backend/domain/: build.gradle
backend/https/: swagger.yml
backend/prisma/: dev.db  schema.prisma
backend/src/: api.effects.ts  di-container.ts  http.listener.ts  index.ts  settings.ts
backend/test/: dummy.spec.ts
django-poc/: .pylintrc  docker-compose.yml
django-poc/inout/: asgi.py  settings.py  urls.py
django-poc/inout_auth/: apps.py  tests.py  urls.py  views.py
docs/business/: negocio.md
docs/inventario/: negocio.md  scenario.md
docs/tutoriais/: criando-projeto-frontend.md
frontend/: .editorconfig  .eslintcache  .eslintrc.js  .eslintrc.json  Makefile  TODO  docker-compose.yml  essencias.csv  essencias.json  ingest.js  ingest.sh  package-lock.json  package.json  tsconfig.json
frontend/config/: webpack.config.js
frontend/docs/: construindo.md
frontend/pages/: _document.tsx  index.tsx
frontend/public/: index.html
iam/: README.md
pdv/django-poc/: .env.example  .gitignore  Dockerfile  makefile  pyproject.toml
pdv/django-poc/inout/: wsgi.py
pdv/django-poc/inout_auth/: authentication.py  serializers.py
pim/asgi-poc/: .pylintrc  pyproject.toml
pim/asgi-poc/pim/: handle_http.py  main.py
pim/python-strawberry-poc/: .pylintrc  products.json  pyproject.toml
pim/python-strawberry-poc/pim/: main.py  models.py
vue-poc/: Dockerfile  docker-compose.yml  package.json
(+483 files in other folders)
