[tool.poetry]
name = "pim"
version = "0.1.0"
description = "Product Informat Managment"
authors = ["Glayson Olivieri"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
asgiref = "^3.8.1"
ruff = "^0.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
